--- a/Dissertation/title.tex
+++ b/Dissertation/title.tex
@@ -2,13 +2,15 @@
 \thispagestyle{empty}
 \begin{center}
 \thesisOrganization
+
+\thesisOrganizationShort
 \end{center}
 %
 \vspace{0pt plus4fill} %число перед fill = кратность относительно некоторого расстояния fill, кусками которого заполнены пустые места
-\IfFileExists{images/logo.pdf}{
+\IfFileExists{images/itmo_2.png}{
   \begin{minipage}[b]{0.5\linewidth}
     \begin{flushleft}
-      \includegraphics[height=3.5cm]{logo}
+      \includegraphics[height=3.5cm]{itmo_2}
     \end{flushleft}
   \end{minipage}%
   \begin{minipage}[b]{0.5\linewidth}
