--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,37 +1,19 @@
 
-{\actuality} Обзор, введение в тему, обозначение места данной работы в
-мировых исследованиях и~т.\:п., можно использовать ссылки на~другие
-работы~\autocite{Gosele1999161,Lermontov}
-(если их~нет, то~в~автореферате
-автоматически пропадёт раздел <<Список литературы>>). Внимание! Ссылки
-на~другие работы в~разделе общей характеристики работы можно
-использовать только при использовании \verb!biblatex! (из-за технических
-ограничений \verb!bibtex8!. Это связано с тем, что одна
-и~та~же~характеристика используются и~в~тексте диссертации, и в
-автореферате. В~последнем, согласно ГОСТ, должен присутствовать список
-работ автора по~теме диссертации, а~\verb!bibtex8! не~умеет выводить в~одном
-файле два списка литературы).
-При использовании \verb!biblatex! возможно использование исключительно
-в~автореферате подстрочных ссылок
-для других работ командой \verb!\autocite!, а~также цитирование
-собственных работ командой \verb!\cite!. Для этого в~файле
-\verb!common/setup.tex! необходимо присвоить положительное значение
-счётчику \verb!\setcounter{usefootcite}{1}!.
+{\actuality} За долгие годы развития промышленного производства было создано множество способов автоматизации производственного процесса. Техническое или машинное зрение уже долгое время успешно применяется в широком спектре отраслей, среди которых существенную долю практического применения занимают задачи промышленного производства. С развитием информационных технологий существует необходимость делегирования от человека к техническим средствам и алгоритмам выполнение разного рода операций, требующих непрерывного контроля и высокой точности. Системы технического зрения или машинное зрение в общем виде --- это комплекс технических и программных средств, созданный с целью интерпретирования, классификации и определения объектов реального мира и использование этого знания для решения конкретной задачи. К этому же определению можно отнести совокупность методических средств и теоретических документов, описывающих данное направление с точки зрения функционирования и применяемости. Основным вектором применения машинного зрения можно назвать такие отрасли, как робототехника и производство, хотя схожие технологии можно встретить и в повседневной жизни, например, при сканировании штрих-кода в супермаркете или так называемые QR-коды. Суть работы такого оборудования в большинстве случаев неизменна – существует реальный объект, из которого путем визуального анализа необходимо получить некую информацию и соответствующим образом ее обработать. К примеру, в штрих-коде такой информацией будет страна и код изготовителя товара, в QR-коде содержится ссылка на какую-либо страницу в Интернете или же простое текстовое сообщение.
 
-Для генерации содержимого титульного листа автореферата, диссертации
-и~презентации используются данные из файла \verb!common/data.tex!. Если,
-например, вы меняете название диссертации, то оно автоматически
-появится в~итоговых файлах после очередного запуска \LaTeX. Согласно
-ГОСТ 7.0.11-2011 <<5.1.1 Титульный лист является первой страницей
-диссертации, служит источником информации, необходимой для обработки и
-поиска документа>>. Наличие логотипа организации на~титульном листе
-упрощает обработку и~поиск, для этого разметите логотип вашей
-организации в папке images в~формате PDF (лучше найти его в векторном
-варианте, чтобы он хорошо смотрелся при печати) под именем
-\verb!logo.pdf!. Настроить размер изображения с логотипом можно
-в~соответствующих местах файлов \verb!title.tex!  отдельно для
-диссертации и автореферата. Если вам логотип не~нужен, то просто
-удалите файл с~логотипом.
+В последнее время с развитием концепции Индустрии 4.0 отмечается рост использования вычислительных технологий в производственных процессах. Все большую популярность обретают небольшие производства, выпускающие единичные или малые партии продукции и способные быстро переориентировать производство под нужды заказчиков. В связи с этим появилась концепция модульных систем управления оборудованием с ЧПУ, более подходящая для нужд производителей. Модульный подход обеспечивает три важные характеристики оборудования: масштабируемость, гибкость и автономность. В соответствии с вышесказанным, машинное зрение также может существовать в систему управления в виде отдельного модуля, расширяемого или упрощаемого в соответствии с типом выполняемой задачи.
+
+Как показывает практика, применение систем машинного зрения в промышленности позволяет существенно повысить эффективность производственных линий, повысить качество выпускаемой продукции, удешевить конечный продукт за счёт высвобождения людских ресурсов, а также выполнять мониторинг процесса, сигнализируя о внештатных или аварийных ситуациях. Кроме того, методами визуального анализа можно проводить первичный контроль готовой продукции, к примеру, определять чистоту поверхности по блику света на ней. Но, разумеется, в этом случае всё упирается в качество используемых технических средств и условия работы системы.
+
+Программная часть системы машинного зрения является совокупностью методов обработки изображений и методов распознавания образов, поскольку в ходе распознавательного процесса необходимо не только «увидеть» объект, но и соответствующим образом классифицировать его. Задача классификации строится из возможности системы выделять признаки анализируемого объекта и отнесения его к какому-либо классу или подклассу. Чаще всего системы распознавания образов проектируются с вводом некоторого количества образов, классификация которых уже известна, таким образом системе проще распознавать объекты, сравнивая их с так называемым эталоном. В общем виде это выглядит так: система принимает на вход объект, проводит анализ и выделяет характеристики, сравнивая их с тем, что было заложено в её базу знаний на этапах разработки, после чего, на основе полученных характеристик, запускается механизм присваивания объекта одному или нескольким классам, что является результатом, впоследствии используемым для решения других задач. Каждый этап работы системы должен содержать механизм обратной связи, чтобы база знаний могла дополняться и улучшаться.
+
+\textbf{Степень разработанности темы.} Разработками в области машинного зрения занимаются многие специалисты из разных научных и исследовательских центров в разных странах. Работы в области промышленного производства составляют лишь малую часть разработок, но всё же она весьма обширна, что подчёркивает актуальность выбранной тематики. К примеру, исследовательская команда из Орхусского университета разрабатывают систему ЧПУ для лазерного резака на основе комбинирования маркеров и дополненной реальности. Система основана на подходе <<What You See Is What You Get>>, где проектор используется для отображения текущих контуров, а маркеры используются для установки его положения в рабочей области. Наряду с этим, специалисты университета Кейо расширяют функциональность фидуциальных  маркеров для лазерного резака. Чтобы установить параметры резки, они размещают набор маркеров опорных точек рядом с заготовкой, в том числе метки, связанные с материалом, порядком операций и командами. В работе описан способ обнаружения ошибок контура на основе машинного зрения. Разработан специальный измерительный прибор с нанесёнными на него маркерами, который позволяет исследователям измерять погрешность контура без сетчатого датчика.
+
+\textbf{Объектом исследования} является многоцелевое модульное технологическое оборудование с числовым программным управлением.
+
+\textbf{Субъектом исследования} является система машинного зрения как совокупность технических и программных средств, направленных на обеспечение функциональности модульного оборудования в рамках решения задач, связанных с производственными процессами.
+
+\textbf{Целью} работы является разработка модуля машинного зрения и его внедрение в систему управления модульной трёхкоординатной платформы.
 
 \ifsynopsis
 Этот абзац появляется только в~автореферате.
@@ -56,12 +38,21 @@
 
 Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
-  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
-  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
-  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
-  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
+ \item Анализ существующих работ по тебе промышленного применения средств машинного зрения, а также существующих патентов.
+ \item Исследование предметной области: функции системы машинного зрения, условия рабочей среды, требуемых точностных и скоростных характеристик.
+ \item Исследование влияния применения систем машинного зрения на производительность оборудования.
+ \item Разработка методов повышения фактической производительности оборудования.
+ \item Разработка состава технических средств, применяемых в комплексе.
+ \item Разработка функциональной и структурной схемы компонентов системы.
+ \item Разработка и реализация распознающих и измерительных алгоритмов.
+ \item Тестирование системы машинного зрения и отдельных её компонентов во время процесса производства изделия.
+ \item Анализ полученных результатов в плоскости совершенствования выполнения технологического процесса производства изделия по различным критериям.
+ \item Внедрение комплекса в состав системы управления модульного оборудования с ЧПУ.
 \end{enumerate}
 
+\textbf{Научная и практическая значимость работы} отражена в применении данной системы в составе системы управления оборудования для производства печатных плат. Данная специфика характеризуется тем, что при производстве печатных плат применяется множество разных операций: обработка резанием, химическое воздействие на обрабатываемую поверхность, УФ-обработка и другие — однако, не существует универсального и доступного решения, чтобы объединить эти операции в одном устройстве. Для производства плат единичного или мелкосерийного характера (к примеру, производство прототипов) необходимо закупать несколько видов специализированного оборудования или размещать заказ на фабриках Китая, что сопряжено с большими временными затратами.
+
+\textbf{Методы исследования.} Для решения обозначенных научных и инженерных задач использовались следующие научные положения: методики обработки изображений, методы распознавания образов, оптика и оптические системы, процедурное и объектно-ориентированное программирование, технологии построения локаьных вычислительных сетей.
 
 {\novelty}
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
@@ -76,17 +67,10 @@
 
 {\defpositions}
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
-  \item Первое положение
-  \item Второе положение
-  \item Третье положение
-  \item Четвертое положение
+ \item Методики выполнения основных функций машинного зрения с достигаемыми точностными характеристиками.
+ \item Структурная схема компонентов компонента машинного зрения, отражающая взаимодействие компонентов друг с другом, а также с внешней средой модульного оборудования..
+ \item Анализ результатов, достигаемых разрабатываемыми алгоритмами.
 \end{enumerate}
-В папке Documents можно ознакомиться в решением совета из Томского ГУ
-в~файле \verb+Def_positions.pdf+, где обоснованно даются рекомендации
-по~формулировкам защищаемых положений.
-
-{\reliability} полученных результатов обеспечивается \ldots \ Результаты находятся в соответствии с результатами, полученными другими авторами.
-
 
 {\probation}
 Основные результаты работы докладывались~на:
