Add biblio entries

--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -16,6 +16,32 @@
   authorconf = {true},
 }
 
+@INPROCEEDINGS{confbib-2017-trajectory-problems,
+	author = {Fedosov, Y. V. and Afanasev, M. Ya. and Krylova, A. A. and Shorokhov, S. A. and Akimov, S. V.},
+	title = {Problems of Trajectory Building During Laser CNC Processing},
+	booktitle = {Proceedings of the 20th Conference of Open Innovations Association {FRUCT}},
+	year = {2017},
+	pages = {585--591},
+	authorscopus = {true},
+	authorwos = {true},
+	addendum = {(Scopus, WoS)},
+	language = {english},
+	authorconf = {true},
+}
+
+@INPROCEEDINGS{confbib-2017-json,
+	author = {Fedosov Y. V. and Afanasev M. Ya. and Krylova A. A. and Shorokhov S. A.},
+	title = {Performance Evaluation of the Message Queue Protocols to Transfer Binary JSON in a Distributed CNC System},
+	booktitle = {Proceedings of 2017 15th IEEE International Conference on Industrial Informatics ({INDIN})},
+	year = {2017},
+	pages = {357--362},
+	language = {russian},
+	authorscopus = {true},
+	authorwos = {true},
+	addendum = {(Scopus, WoS)},
+	language = {english},
+	authorconf = {true},
+
 @ARTICLE{bib1,
   author = {Фамилия, И. О.},
   title = {Название статьи},
